--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   get:
   shared_preferences:
+  cached_network_image:
+  lottie:
+  http:
+  intl:
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +34,7 @@ flutter:
 
   assets:
      - assets/splashLogo/
+     - assets/Lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
