--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_crashlytics:
   firebase_database:
   firebase_storage:
+  connectivity_plus:
 
 dev_dependencies:
   flutter_test:
